# deus-ex-diorama

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  pkgx.yml
cli/: Cargo.toml  pkgx.yml
lib/genai_api/: Cargo.toml
lib/llamacpp-sys/: build.rs  pkgx.yml
lib/llamacpp-sys/src/: lib.rs
modules/genai-api/: Cargo.toml
modules/genai-api/src/api/chat/completions/: request.rs
modules/genai-api/src/api/chat/completions/response/: chunk.rs
modules/genai_api/src/: api.rs  lib.rs
modules/genai_api/src/api/chat/completions/: response.rs
modules/libllama-sys/: .gitignore  Cargo.toml  build.rs  pkgx.yml  wrapper.hpp
modules/libllama-sys/src/: bindings.rs  lib.rs
modules/llamacpp-sys/: Cargo.toml
src/: app.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/llama/: backend.rs  chat_message.rs  chat_template.rs  context.rs  generated.rs  log.rs  mod.rs  model.rs  sampler.rs  threadpool.rs  vocab.rs
webui/: package-lock.json  package.json
