[package]
name = "deus-ex-diorama"
version = "0.1.0"
edition = "2021"

[lib]
name = "deus_ex_diorama"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
directories = "6.0.0"
hf-hub = "0.4.1"
llamacpp-sys = { path = "./lib/llamacpp-sys" }
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
