[package]
name = "deus_ex_diorama"
version = "0.1.0"
edition = "2021"

[lib]
name = "deus_ex_diorama"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
directories = "6.0.0"
hf-hub = "0.4.1"
llamacpp-sys = { path = "./modules/llamacpp-sys" }
genai_api = { path = "./modules/genai_api" }
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
